# ecommerce-product

./: .gitignore  README.md  docker-compose.yml
authservice/: Dockerfile  build.gradle
authservice/src/main/resources/: application.properties
dashboard-service/: pyproject.toml
db-init/: init.sql  products.sql
insights-service/: .env  pyproject.toml
insights-service/app/: database.py  db_models.py  main.py  models.py
mcp/: pom.xml
mcp/src/main/resources/: application.properties
ordermanagement/: pom.xml
productservice/: pom.xml
productservice/src/main/resources/: application.properties
ui-app/: .env  Dockerfile  package-lock.json  package.json  vite.config.ts
ui-app/src/: App.tsx  index.css  vite-env.d.ts
ui-app/src/api/: AuthService.ts  ProductService.ts  UserService.ts
ui-app/src/components/: AddUser.tsx  AlertMessage.tsx  ChatBot.tsx  HomePageHeaderActions.tsx  Loader.tsx
ui-app/src/hooks/: useWebsocket.tsx
ui-app/src/models/: auth.ts  prodcuts.ts  user.ts
ui-app/src/pages/auth/: index.tsx
ui-app/src/pages/auth/signup/: index.tsx
ui-app/src/pages/home/: HomePage.tsx  index.tsx
ui-app/src/pages/home/products/: index.tsx
ui-app/src/providers/: index.tsx
ui-app/src/queries/: ProductQueries.ts  UserQueries.ts  index.ts  querykeys.ts
ui-app/src/routes/: routes.tsx
ui-app/src/store/: index.ts
ui-app/src/themes/: index.ts
userservice/: pom.xml
userservice/src/main/resources/: application-test.properties  application.properties
ws/: Dockerfile  pom.xml
ws/src/main/resources/: application.properties
(+63 files in other folders)
